2008-12-25  Martin Rudalics  <rudalics@gmx.at>

	* help.el (help-for-help-internal): Fix entry for "l".

2008-12-25  Richard M Stallman  <rms@gnu.org>

	* shadowfile.el (shadow-copy-file): Revert previous change.
	This code as it was should work properly with buffer-swapped-with.

2008-12-24  Francois Fleuret  <francois.fleuret@idiap.ch>  (tiny change)

	* textmodes/tex-mode.el (tex-bibtex-file): Use tex-main-file.

2008-12-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* subr.el (chmod): New defalias for set-file-modes.

2008-12-23  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-filter-predicate, isearch-search):
	Replace `isearch-filter-invisible' with `isearch-filter-visible'.
	(isearch-filter-visible): Rename from
	`isearch-filter-invisible'.  Doc fix.

	* dired-aux.el (dired-isearch-filenames-toggle): Use the original
	value from `dired-isearch-filter-predicate-orig' instead of the
	symbol `isearch-filter-invisible'.  Doc fix.
	(dired-isearch-filter-filenames): Doc fix.
	Replace `isearch-filter-invisible' with `isearch-filter-visible'.

	* info.el (Info-find-node-2): Use negative offset 2 instead of 1
	for Info-point-loc since it is more correct in all cases.
	(Info-isearch-filter): Rename from
	`Info-isearch-filter-predicate'.  Doc fix.
	(Info-mode): Replace `Info-isearch-filter-predicate' with
	`Info-isearch-filter'.

2008-12-23  Daiki Ueno  <ueno@unixuser.org>

	* pgg.el: Add obsolescence info.

2008-12-22  Richard M Stallman  <rms@gnu.org>

	* shadowfile.el (shadow-copy-file): Handle buffer-swapped-with.

	* files.el (buffer-swapped-with): New variable.
	(basic-save-buffer-0): Most of basic-save-buffer moved here.
	(basic-save-buffer): Unswap the buffer temporarily if nec.

	* dired.el (dired-readin): Inhibit modification hooks.

2008-12-22  Ulf Jasper  <ulf.jasper@web.de>

	* net/newst-backend.el (newst-backend):
	Remove wrong duplicate provide statement.

2008-12-22  Michael Albinus  <michael.albinus@gmx.de>
